    - Replace the built-in recipe with barrels
    - Check if the output side is actually moving the fluids away
    - Make them omnidirectional
    - Attempt to divide the flow between paralel washboxes
    - Return orientation since it breaks parralel detectionaq
    - Undo broken overcomplicated parralel detector
    - Undo needing pumps on the output side
    - Simplify the parralel detector
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025. 06. 24
  Info:
    - Require .56 for https://forums.factorio.com/129441
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025. 06. 17
  Info:
    - Fix circuit gui being accessible by accident
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025. 06. 17
  Info:
    - Fix the washbox icon being searched in other mods
    - Put the selection debug mode in a shared variable
    - Briefly explain the inner workings
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025. 06. 17
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 06. 17
  Info:
    - Add the k2 pollution filter washing recipe
    - Align washbox icon vertically to the pump
    - Test the colored working visualizations
    - Setup the masks properly
    - Disable the alt mode recipe icon
    - Attempt to link some valves to the furnace
    - Put the furnace input fluidbox above the output one
    - Prepare wube debug build
    - Overcome the limitations
    - Detect the flow speed through lots of crafts
    - Hook up the furnace to only run with enough flow
    - Finalize the compound entity
    - Fix stray transparent pixels
    - Setup deathrattle tech